James Kinne #38753

Closed
opened 2014-02-22 05:48:09 +01:00 by James Kinne · 15 comments

Windows 7 Ultimate EVGA GTX 580

Blender Version
2.69.11
hash: 10f4c62
Worked: (optional)

Short description of error
Using blender internal/blender render, every time I try to set the Physics/Cloth/Preset for a basic mesh plane to a certain type cloth I get an error pop up screen saying

"C:\User . . ... . . . . .2.69\scripts\startup\bl_operators", presets.py, line 210, in execute bpy.ops.script.python_file_run(filepath=filepath)

This build runs good my windows 8 machine. Don't know why . . . Every thing else seems to work good in Window 7 too though I'm sure I don't use everything else, however I do use quite a bit.

Windows 7 Ultimate EVGA GTX 580 **Blender Version** 2.69.11 hash: 10f4c62 Worked: (optional) **Short description of error** Using blender internal/blender render, every time I try to set the Physics/Cloth/Preset for a basic mesh plane to a certain type cloth I get an error pop up screen saying "C:\User . . ... . . . . .2.69\scripts\startup\bl_operators", presets.py, line 210, in execute bpy.ops.script.python_file_run(filepath=filepath) This build runs good my windows 8 machine. Don't know why . . . Every thing else seems to work good in Window 7 too though I'm sure I don't use everything else, however I do use quite a bit.
Author

Changed status to: 'Open'

Changed status to: 'Open'
Author

Added subscriber: @jkcinci

Added subscriber: @jkcinci
Author

blender 2.69.0 r20995 and all the builds I have from 2.59.0 r39654M on have the same problem, it may go back further than this, the 2.57 build works great on Windows 7 Ultimate.

blender 2.69.0 r20995 and all the builds I have from 2.59.0 r39654M on have the same problem, it may go back further than this, the 2.57 build works great on Windows 7 Ultimate.
Author

Here is a full copy of the error pop up screen from blender 2.69.0 r60995

Traceback (most recent call last):

File "C:\Users\J1\Desktop\Blender Zips & Exe's\blender-2.69-windows64 (1)\blender-2.69-windows64\2.69\scripts\startup\bl_operators\presets.py", line 210, in execute
  bpy.ops.script.python_file_run(filepath=filepath)
File "C:\Users\J1\Desktop\Blender Zips & Exe's\blender-2.69-windows64 (1)\blender-2.69-windows64\2.69\scripts\modules\bpy\ops.py", line 188, in __call__
  ret = op_call(self.idname_py(), None, kw)

RuntimeError: Error: File "", line 1

  f=open(r'C:\Users\J1\Desktop\Blender Zips & Exe's\blender-2.69-windows64 (1)\blender-2.69-windows64\2.69\scripts\presets\cloth\cotton.py');exec(f.read());f.close()
                                                  ^

SyntaxError: invalid syntax

location: C:\Users\J1\Desktop\Blender Zips & Exe's\blender-2.69-windows64 (1)\blender-2.69-windows64\2.69\scripts\modules\bpy\ops.py:188

location: :-1

Here is a full copy of the error pop up screen from blender 2.69.0 r60995 Traceback (most recent call last): ``` File "C:\Users\J1\Desktop\Blender Zips & Exe's\blender-2.69-windows64 (1)\blender-2.69-windows64\2.69\scripts\startup\bl_operators\presets.py", line 210, in execute bpy.ops.script.python_file_run(filepath=filepath) File "C:\Users\J1\Desktop\Blender Zips & Exe's\blender-2.69-windows64 (1)\blender-2.69-windows64\2.69\scripts\modules\bpy\ops.py", line 188, in __call__ ret = op_call(self.idname_py(), None, kw) ``` RuntimeError: Error: File "<string>", line 1 ``` f=open(r'C:\Users\J1\Desktop\Blender Zips & Exe's\blender-2.69-windows64 (1)\blender-2.69-windows64\2.69\scripts\presets\cloth\cotton.py');exec(f.read());f.close() ^ ``` SyntaxError: invalid syntax location: C:\Users\J1\Desktop\Blender Zips & Exe's\blender-2.69-windows64 (1)\blender-2.69-windows64\2.69\scripts\modules\bpy\ops.py:188 location: <unknown location>:-1

This issue was referenced by blender/blender-addons-contrib@99edd29835

This issue was referenced by blender/blender-addons-contrib@99edd29835fca6128ff05cc1e67885448eadc62d

This issue was referenced by 99edd29835

This issue was referenced by 99edd29835fca6128ff05cc1e67885448eadc62d

Changed status from 'Open' to: 'Resolved'

Changed status from 'Open' to: 'Resolved'

Closed by commit 99edd29835.

Closed by commit 99edd29835.

Changed status from 'Resolved' to: 'Open'

Changed status from 'Resolved' to: 'Open'

Added subscriber: @kjym3

Added subscriber: @kjym3

I have prepared D383 to fix a problem introduced by the revision 99edd29.

The problem is that module local names of a script such as classes and functions are not accessible. Here is a simple Python script to demonstrate the issue.

test.py

The execution of this script by means of the '--python' command line option fails as follows:

> blender --background --python test.py
  :
Traceback (most recent call last):
  File "<string>", line 1, in <module>
  File "<string>", line 8, in <module>
  File "<string>", line 5, in main
NameError: global name 'foo' is not defined

The task is reopened. Code review of D383 is duly acknowledged.

I have prepared [D383](https://archive.blender.org/developer/D383) to fix a problem introduced by the revision 99edd29. The problem is that module local names of a script such as classes and functions are not accessible. Here is a simple Python script to demonstrate the issue. [test.py](https://archive.blender.org/developer/F80021/test.py) The execution of this script by means of the '--python' command line option fails as follows: ``` > blender --background --python test.py : Traceback (most recent call last): File "<string>", line 1, in <module> File "<string>", line 8, in <module> File "<string>", line 5, in main NameError: global name 'foo' is not defined ``` The task is reopened. Code review of [D383](https://archive.blender.org/developer/D383) is duly acknowledged.

Changed status from 'Open' to: 'Resolved'

Changed status from 'Open' to: 'Resolved'
Tamito Kajiyama self-assigned this 2014-03-05 17:40:27 +01:00

Added subscriber: @ideasman42

Added subscriber: @ideasman42

Closed by commit a8dc5b2. Thanks @ideasman42 for the quick response.

Closed by commit a8dc5b2. Thanks @ideasman42 for the quick response.
Author

I believe that the intention of the

Constraint / Relationship / Follow Path
and the
Modifier / Deform / Curve

were not meant to be compatible.

The good new is I've found the solution to my application in the Graph Editor.

Your time and consideration are greatly appreciated.

I believe that the intention of the Constraint / Relationship / Follow Path and the Modifier / Deform / Curve were not meant to be compatible. The good new is I've found the solution to my application in the Graph Editor. Your time and consideration are greatly appreciated.
Sign in to join this conversation.
No Label
Interest
Alembic
Interest
Animation & Rigging
Interest
Asset Browser
Interest
Asset Browser Project Overview
Interest
Audio
Interest
Automated Testing
Interest
Blender Asset Bundle
Interest
BlendFile
Interest
Collada
Interest
Compatibility
Interest
Compositing
Interest
Core
Interest
Cycles
Interest
Dependency Graph
Interest
Development Management
Interest
EEVEE
Interest
EEVEE & Viewport
Interest
Freestyle
Interest
Geometry Nodes
Interest
Grease Pencil
Interest
ID Management
Interest
Images & Movies
Interest
Import Export
Interest
Line Art
Interest
Masking
Interest
Metal
Interest
Modeling
Interest
Modifiers
Interest
Motion Tracking
Interest
Nodes & Physics
Interest
OpenGL
Interest
Overlay
Interest
Overrides
Interest
Performance
Interest
Physics
Interest
Pipeline, Assets & IO
Interest
Platforms, Builds & Tests
Interest
Python API
Interest
Render & Cycles
Interest
Render Pipeline
Interest
Sculpt, Paint & Texture
Interest
Text Editor
Interest
Translations
Interest
Triaging
Interest
Undo
Interest
USD
Interest
User Interface
Interest
UV Editing
Interest
VFX & Video
Interest
Video Sequencer
Interest
Virtual Reality
Interest
Vulkan
Interest
Wayland
Interest
Workbench
Interest: X11
Legacy
Blender 2.8 Project
Legacy
Milestone 1: Basic, Local Asset Browser
Legacy
OpenGL Error
Meta
Good First Issue
Meta
Papercut
Meta
Retrospective
Meta
Security
Module
Animation & Rigging
Module
Core
Module
Development Management
Module
EEVEE & Viewport
Module
Grease Pencil
Module
Modeling
Module
Nodes & Physics
Module
Pipeline, Assets & IO
Module
Platforms, Builds & Tests
Module
Python API
Module
Render & Cycles
Module
Sculpt, Paint & Texture
Module
Triaging
Module
User Interface
Module
VFX & Video
Platform
FreeBSD
Platform
Linux
Platform
macOS
Platform
Windows
Priority
High
Priority
Low
Priority
Normal
Priority
Unbreak Now!
Status
Archived
Status
Confirmed
Status
Duplicate
Status
Needs Info from Developers
Status
Needs Information from User
Status
Needs Triage
Status
Resolved
Type
Bug
Type
Design
Type
Known Issue
Type
Patch
Type
Report
Type
To Do
No Milestone
No project
No Assignees
4 Participants
Notifications
Due Date
The due date is invalid or out of range. Please use the format 'yyyy-mm-dd'.

No due date set.

Dependencies

No dependencies set.

Reference: blender/blender#38753
No description provided.