Fix T38753: Python script paths weren't escaped (Win only)